--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+
+
+
+/* Nav */
+
+.navbar {
+  width: 100%;
   text-align: center;
+  background-color: #5551FF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* wrapper */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  background-color: #1BB6F6;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
 }
 
-.App-link {
-  color: #61dafb;
+/* Hero */
+
+.hero {
+  width: 100%;
+  text-align: center;
+  background-color: #28A958;
+  height: 50%
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Images */
+
+.images {
+  max-width: 200px;
+  margin: 20px;
+  height: 250px;
+  box-shadow: gray 4px 4px;
+}
+
+.img-container :hover {
+  cursor: pointer;
+  border: gray 2px solid;
 }
