--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
 
-
+body {
+  font-family: 'New Tegomin', serif;
+}
 
 /* Nav */
 
 .navbar {
   width: 100%;
-  text-align: center;
-  background-color: #5551FF;
 }
 
+.navbar h1 {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* wrapper */
 
 .wrapper {
-  background-color: #1BB6F6;
   height: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  align-content: flex-start;
-  overflow: auto;
-}
-
-/* Hero */
-
-.hero {
   width: 100%;
   text-align: center;
-  background-color: #28A958;
-  height: 50%
+}
+
+.Score {
+  border: 1px solid black;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2rem;
 }
 
 /* Images */
 
 .images {
-  max-width: 200px;
+  min-width: 180px;
+  max-width: 180px;
   margin: 20px;
-  height: 250px;
+  max-height: 200px;
+  min-height: 200px;
   box-shadow: gray 4px 4px;
+  border-radius: 1rem;
 }
 
 .img-container :hover {
   cursor: pointer;
   border: gray 2px solid;
+}
+
+
+.card-row {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
