--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,18 @@ body {
 
 .navbar {
   width: 100%;
+  text-align: center;
 }
 
 .navbar h1 {
   margin-left: auto;
   margin-right: auto;
+}
+
+@media only screen and (max-width: 500px) {
+  .navbar h1 {
+    font-size: 2rem;
+  }
 }
 
 /* wrapper */
@@ -75,6 +82,18 @@ body {
   box-shadow: rgb(159, 151, 198) 4px 4px;
 }
 
+@media only screen and (max-width: 500px) {
+  .Score {
+    width: 90%;
+  }
+  .Score h3 {
+    font-size: 1.3rem;
+  }
+  .Score h5 {
+    font-size: 1rem;
+  }
+}
+
 /* Images */
 
 .images {
@@ -87,6 +106,17 @@ body {
   border-radius: 1rem;
 }
 
+@media only screen and (max-width: 500px) {
+  .images {
+    min-width: 50px;
+    max-width: 50px;
+    margin: 10px;
+    max-height: 60px;
+    min-height: 60px;
+  }
+}
+
+
 .img-container :hover {
   cursor: pointer;
   border: gray 2px solid;
@@ -95,6 +125,7 @@ body {
 }
 
 .card-row {
+  margin-top: 2.5rem;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -105,9 +136,20 @@ body {
   top: 2%;
   right: 20%;
 }
-.pause-button button {
-  background-color: rgb(53, 61, 83);
+.pause-button a {
   border: none;
-  width: 5rem;
-  height: 3rem;
+}
+.pause-button img {
+  width: 50px;
+}
+
+@media only screen and (max-width: 500px) {
+  .pause-button {
+  right: 40%;
+  top: 17%;
+  }
+  .pause-button a {
+    width: 2rem;
+    height: 0.5rem;
+  }
 }
